# sqlite_practice

./: .python-version  pyproject.toml
tut01/: db_utils.py  init_db.py  main_script.py  query_script.py  readme.md
tut01/db/: db_utils.py  example_table.md
